@@ -1,20 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-Licensed to the Apache Software Foundation (ASF) under one or more contributor
-license agreements.  See the NOTICE.txt file distributed with this work for
-additional information regarding copyright ownership.  The ASF licenses this
-file to you under the Apache License, Version 2.0 (the "License"); you may not
-use this file except in compliance with the License.  You may obtain a copy of
-the License at
-
-     http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
-License for the specific language governing permissions and limitations under
-the License.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -28,25 +11,7 @@ the License.
   <description>The resource management component of a Catalog and Archive Service. This component
      provides job management, and management of the underlying software system hardware
      and resources, such as disk space, computational resources, and shared identity.</description>
-  <!-- All dependencies should be listed in core/pom.xml and be ordered alphabetically by package and artifact.
-     Once the dependency is in the core pom, it can then be used in other modules without the version tags.
-     For example, within core/pom.xml:
-
-      <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk</artifactId>
-      <version>1.7.4</version>
-    </dependency>
-
-     Elsewhere in the platform:
-     <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk</artifactId>
-    </dependency>
-
-     Where possible the same dependency version should be used across the whole platform but if required the version
-     can be overridden in a specific pom and should have a comment explaing why the version has been overridden
-  -->
+  
   <scm>
    	<connection>scm:svn:https://svn.apache.org/repos/asf/oodt/trunk/resource</connection>
    	<developerConnection>scm:svn:https://svn.apache.org/repos/asf/oodt/trunk/resource</developerConnection>
@@ -97,7 +62,7 @@ the License.
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4</version>
+        <version>2.22.2</version>
         <configuration>
           <forkMode>pertest</forkMode>
           <useSystemClassLoader>false</useSystemClassLoader>
@@ -116,7 +81,7 @@ the License.
           <includes>
             <include>**/*Test*.java</include>
           </includes>
-        </configuration>
+        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine></configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -150,7 +115,7 @@ the License.
       <version>1.3.1</version>
       <exclusions>
         <exclusion>
-          <!-- xom is an optional dependency of xstream. Its also an Apache incompatible license -->
+          
           <groupId>xom</groupId>
           <artifactId>xom</artifactId>
         </exclusion>
@@ -196,7 +161,7 @@ the License.
       <groupId>commons-pool</groupId>
       <artifactId>commons-pool</artifactId>
     </dependency>
-    <!-- Logging - JUL to SLF4J -->
+    
     <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jul-to-slf4j</artifactId>
